feat: add order domain exceptions